# curiOS

./: Cargo.toml  Makefile  x86_64-curios.json
.cargo/: config.toml
src/: main.rs
